--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="myApp">
 <head>
   <meta charset="utf-8">
-  <title>My AngularJS App</title>
+  <title>VCF</title>
    <!-- <link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css"/> -->
    <link rel="stylesheet" type="text/css" href="bower_components/foundation/css/foundation.min.css"/>
   <link rel="stylesheet" href="css/style.css"/>
@@ -17,7 +17,6 @@
   <!-- <div ng-view></div> -->
 <div data-ng-include="'views/topbar.tmpl.html'"></div>
 <div ng-view ></div>
-
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
